[tool.poetry]
name = "interleave-scanned-pdf"
version = "0.1.0"
description = ""
authors = ["Rodrigo Bermudez Schettino <rodrigobdz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymupdf = "^1.25.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
